feat: Added yak4j-git library
yak4j-git spawns git and offers common operations around it